// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PasswordResetRequest > matches snapshot in en 1`] = `
<div
  class="page auth password-reset-request"
  data-centered="false"
>
  <div
    class="page-header"
  >
    <div
      class="page-title-wrapper"
    >
      <h1>
        Reset your password
      </h1>
      
      <!---->
      
    </div>
    <div
      class="page-toolbar"
    >
      
      
    </div>
  </div>
  <div
    class="page-content"
  >
    
    
    
    <form
      novalidate=""
    >
      <div
        class="field email"
      >
        <label
          for="email"
        >
          Your email
        </label>
        
        <input
          class=""
          name="email"
          placeholder="john.doe@example.com"
          tabindex="0"
          type="email"
        />
        <!---->
        
      </div>
      <div
        class="actions"
      >
        <button
          class="loading-button"
          data-v-3fdbc7b3=""
        >
          <div
            class="label"
            data-v-3fdbc7b3=""
          >
            <span
              data-v-3fdbc7b3=""
            >
              Email me
            </span>
          </div>
          <!---->
        </button>
      </div>
    </form>
    
  </div>
</div>
`;

exports[`PasswordResetRequest > matches snapshot in fr 1`] = `
<div
  class="page auth password-reset-request"
  data-centered="false"
>
  <div
    class="page-header"
  >
    <div
      class="page-title-wrapper"
    >
      <h1>
        Réinitialisation de votre mot de passe
      </h1>
      
      <!---->
      
    </div>
    <div
      class="page-toolbar"
    >
      
      
    </div>
  </div>
  <div
    class="page-content"
  >
    
    
    
    <form
      novalidate=""
    >
      <div
        class="field email"
      >
        <label
          for="email"
        >
          Votre adresse courriel
        </label>
        
        <input
          class=""
          name="email"
          placeholder="john.doe@example.com"
          tabindex="0"
          type="email"
        />
        <!---->
        
      </div>
      <div
        class="actions"
      >
        <button
          class="loading-button"
          data-v-3fdbc7b3=""
        >
          <div
            class="label"
            data-v-3fdbc7b3=""
          >
            <span
              data-v-3fdbc7b3=""
            >
              Réinitialiser
            </span>
          </div>
          <!---->
        </button>
      </div>
    </form>
    
  </div>
</div>
`;
